--- a/WEB-INF/classes/com/tmpPage/client/CellTable.css
+++ b/WEB-INF/classes/com/tmpPage/client/CellTable.css
@@ -16,7 +16,7 @@
 /*@def selectionBorderWidth 2px;*/
 @def selectionBorderWidth 0px;
 .cellTableWidget {
-  border:1px solid rgba(0,0,0,0.3);
+  border:1px solid rgba(0,0,0,0.1);
 }
 
 .cellTableFirstColumn {
@@ -42,10 +42,15 @@
   height:50px;
   text-align: left;
 /*   color: rgba(0,0,0,0.9); */
-  color: white;
-  background:rgba(0,50,90,0.6);
-  text-shadow: #ddf 0px 0px 0;
+ 
+  font-weight:bold;
+/*   background:rgba(0,50,90,0); */
+/*   text-shadow: #ddf 0px 0px 0; */
+  background:rgba(0,0,0,0.01);
   overflow: hidden;
+  text-shadow:none;
+  color: rgba(0,0,0,0.7);
+  font-size:14px;
 }
 
 .cellTableCell {
@@ -53,6 +58,8 @@
 /*   padding-top:10px; */
 /*   padding-bottom:10px; */
   height:40px;
+/*     color: rgba(0,0,0,0.7); */
+  font-size:14px;
 }
 
 .cellTableFirstColumnFooter {
@@ -78,6 +85,7 @@
 
 .cellTableSortableHeader:hover {
   color: #6c6b6b;
+  background: rgba(0,0,0,0.1);
 }
 
 .cellTableSortedHeaderAscending {
