--- a/tmppagedashboard/bootstrap.css
+++ b/tmppagedashboard/bootstrap.css
@@ -1093,7 +1093,9 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #333333;
+/*   color: #333333; Original*/
+/* SET FONT COLOR */
+  color:rgba(0,0,0,0.7);	
   background-color: #ffffff;
 }
 input,
@@ -1194,7 +1196,8 @@ h6,
   font-family: inherit;
   font-weight: 500;
   line-height: 1.1;
-  color: inherit;
+/*   SET FONT COLOR EMC NOTE  */
+  color: rgba(0,0,0,0.8);
 }
 h1 small,
 h2 small,
@@ -5695,6 +5698,7 @@ button.list-group-item-danger.active:focus {
 }
 .panel-default > .panel-heading {
   color: #333333;
+   font-weight: bold;
   background-color: #f5f5f5;
   border-color: #dddddd;
 }
