--- a/tmppagedashboard/tableStyle.css
+++ b/tmppagedashboard/tableStyle.css
@@ -16,7 +16,7 @@
 }
 	
 .cell-Table-col-non-alert{
-	color:black;
+	color:rgba(0,0,0,0.7);
 	vertical-align: middle !important;
 /* 	padding-top:10px !important; */
 /* 	padding-bottom:10px !important; */
